ia64: No early printk for GENERIC.
Here is a patch to the ia64 Kconfig file that disables the
EARLY_PRINTK menu option if a GENERIC kernel is selected.

As we discussed last week, EARLY_PRINTK doesn't work for
GENERIC kernels because readb/readl are machvecs.

--- a/arch/ia64/Kconfig
+++ b/arch/ia64/Kconfig
@@ -846,7 +846,7 @@ config MAGIC_SYSRQ
 
 config IA64_EARLY_PRINTK
 	bool "Early printk support"
-	depends on DEBUG_KERNEL
+	depends on DEBUG_KERNEL && !IA64_GENERIC
 	help
 	  Selecting this option uses the VGA screen or serial console for
 	  printk() output before the consoles are initialised.  It is useful
