ia64: Still more gate DSO tuning.  Turns out a linker bug prevented 	us from building the gate DSO in a way that makes it fit in 	<= 1 page. If a fixed linker is available, we do it in this 	space-saving way now. Otherwise, we'll do it the old way 	(the gate DSO will then take up about 18KB instead of just 	~3KB).  Thanks to Roland McGrath for making this all work.

--- a/arch/ia64/Makefile
+++ b/arch/ia64/Makefile
@@ -27,6 +27,10 @@ GCC_MINOR_VERSION=$(shell $(CC) -v 2>&1 | fgrep 'gcc version' | cut -f3 -d' ' | 
 
 GAS_STATUS=$(shell arch/ia64/scripts/check-gas $(CC) $(OBJDUMP))
 
+arch-cppflags	:= $(shell arch/ia64/scripts/toolchain-flags $(CC) $(LD) $(OBJDUMP))
+cflags-y	+= $(arch-cppflags)
+AFLAGS		+= $(arch-cppflags)
+
 ifeq ($(GAS_STATUS),buggy)
 $(error Sorry, you need a newer version of the assember, one that is built from	\
 	a source-tree that post-dates 18-Dec-2002.  You can find a pre-compiled	\
