ia64: Sync with 2.5.71.

--- a/arch/ia64/kernel/Makefile
+++ b/arch/ia64/kernel/Makefile
@@ -19,18 +19,28 @@ obj-$(CONFIG_MODULES)		+= module.o
 obj-$(CONFIG_SMP)		+= smp.o smpboot.o
 obj-$(CONFIG_PERFMON)		+= perfmon_default_smpl.o
 
+# The gate DSO image is built using a special linker script.
+targets += gate.so gate-syms.o
+
 AFLAGS_gate.lds.o += -P -C -U$(ARCH)
 arch/ia64/kernel/gate.lds.s: %.s: %.S scripts FORCE
 	$(call if_changed_dep,as_s_S)
-$(obj)/gate.so: $(src)/gate.lds.s $(obj)/gate.o
-	$(CC) -nostdlib -shared -s -Wl,-soname=linux-gate.so.1 \
-		-o $@ -Wl,-T,$^
-extra-y += gate.so
+
+quiet_cmd_gate = GATE $@
+      cmd_gate = $(CC) -nostdlib $(GATECFLAGS_$(@F)) -Wl,-T,$(filter-out FORCE,$^) -o $@
+
+GATECFLAGS_gate.so = -shared -s -Wl,-soname=linux-gate.so.1
+$(obj)/gate.so: $(src)/gate.lds.s $(obj)/gate.o FORCE
+	$(call if_changed,gate)
 
 $(obj)/built-in.o: $(obj)/gate-syms.o
 $(obj)/built-in.o: ld_flags += -R $(obj)/gate-syms.o
-$(obj)/gate-syms.o: $(src)/gate.lds.s $(obj)/gate.o
-	$(CC) -nostdlib -r -o $@ -Wl,-T,$^
-extra-y += gate-syms.o
 
+GATECFLAGS_gate-syms.o = -r
+$(obj)/gate-syms.o: $(src)/gate.lds.s $(obj)/gate.o FORCE
+	$(call if_changed,gate)
+
+# gate-data.o contains the gate DSO image as data in section .data.gate.
+# We must build gate.so before we can assemble it.
+# Note: kbuild does not track this dependency due to usage of .incbin
 $(obj)/gate-data.o: $(obj)/gate.so
